--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Tutorial-Increment</title>
 </head>
 <body>
     <div class="element">
         <h1>People Entered:</h1>
         <h2 id="count-el">0</h2>
         <button class="inc_btn" id="increment_btn" onclick="increment()">Increment</button>
+        <button class="save_btn" id="save_btn" onclick="save()">Save</button>
+        <!-- <button class="sum_btn" id="save_btn" onclick="runningTotal()">Total</button> -->
+        <p id="save-el">Previous Entries:</p>
+        <p id="sum"></p>
     </div>
     
     <script src="script.js"></script>
